syntax = 'proto3';
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "product/product_model.proto";

package product;

option go_package = "shared/service";

message GetAllProductsResponse {
  repeated product.Product products = 1;
}

service ProductQueryService {
  rpc getProduct(google.protobuf.StringValue) returns (product.Product);
  rpc getAllProducts(google.protobuf.Empty) returns (GetAllProductsResponse);
}

message CommandProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

service ProductCommandService {
  rpc createProduct(CommandProductRequest) returns (product.Product);
  rpc updateProduct(CommandProductRequest) returns (product.Product);
  rpc deleteProduct(google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}